[gd_scene load_steps=15 format=2]

[ext_resource path="res://scripts/ui/pieces/menu_Button.gd" type="Script" id=1]
[ext_resource path="res://scripts/ui/pieces/validator_entry.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.968627, 0.243137, 0.690196, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 0.596078 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="DynamicFontData" id=3]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=4]
size = 14
use_mipmaps = true
use_filter = true
extra_spacing_top = -5
extra_spacing_bottom = -5
font_data = SubResource( 3 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0, 0, 0.219608 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=6]
font_path = "res://fonts/Roboto-Bold.ttf"

[sub_resource type="DynamicFont" id=7]
size = 12
use_mipmaps = true
use_filter = true
font_data = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.972549, 0.356863, 0.737255, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=9]
content_margin_top = 5.0
bg_color = Color( 0.96875, 0.261108, 0.698825, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="StyleBoxFlat" id=10]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0, 0, 0, 0.0941176 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 20

[sub_resource type="DynamicFontData" id=11]
font_path = "res://fonts/Roboto-Medium.ttf"

[sub_resource type="DynamicFont" id=12]
size = 14
use_mipmaps = true
use_filter = true
font_data = SubResource( 11 )

[node name="validator_entry" type="PanelContainer"]
margin_right = 757.0
margin_bottom = 35.0
rect_min_size = Vector2( 757, 0 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_top = 5.0
margin_right = 747.0
margin_bottom = 30.0
custom_constants/separation = 6

[node name="always" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 737.0
margin_bottom = 25.0
alignment = 1

[node name="row" type="LineEdit" parent="VBoxContainer/always"]
margin_left = 206.0
margin_right = 262.0
margin_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
custom_styles/read_only = SubResource( 2 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Row X:"
align = 1
editable = false
expand_to_text_length = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="data1" type="LineEdit" parent="VBoxContainer/always"]
margin_left = 266.0
margin_right = 312.0
margin_bottom = 25.0
focus_mode = 0
custom_styles/read_only = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 0.937255 )
text = "data1"
align = 1
editable = false
expand_to_text_length = true

[node name="data2" type="LineEdit" parent="VBoxContainer/always"]
margin_left = 316.0
margin_right = 362.0
margin_bottom = 25.0
focus_mode = 0
custom_styles/read_only = SubResource( 5 )
custom_fonts/font = SubResource( 7 )
custom_colors/font_color_uneditable = Color( 1, 1, 1, 0.937255 )
text = "data2"
align = 1
editable = false
expand_to_text_length = true

[node name="diff" type="Button" parent="VBoxContainer/always"]
margin_left = 366.0
margin_right = 446.0
margin_bottom = 25.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.717647, 0.894118, 1 )
enabled_focus_mode = 0
text = "Different"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
my_url = "/utxo/bisect/"

[node name="no_data" type="Button" parent="VBoxContainer/always"]
margin_left = 450.0
margin_right = 530.0
margin_bottom = 25.0
rect_min_size = Vector2( 80, 0 )
focus_mode = 0
custom_styles/hover = SubResource( 8 )
custom_styles/pressed = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 10 )
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 0.419608 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 0.717647, 0.894118, 1 )
enabled_focus_mode = 0
text = "No Data"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
my_url = "/utxo/bisect/"
[connection signal="menu_button_pressed" from="VBoxContainer/always/diff" to="." method="_on_diff_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/always/diff" to="VBoxContainer/always/diff" method="_on_Button_pressed"]
[connection signal="menu_button_pressed" from="VBoxContainer/always/no_data" to="." method="_on_no_data_menu_button_pressed"]
[connection signal="pressed" from="VBoxContainer/always/no_data" to="VBoxContainer/always/no_data" method="_on_Button_pressed"]
